force-app/main/default/objects/WorkOrder/fields/ActionTaken__c.field-meta.xml
<CustomField>
    <fullName>ActionTaken__c</fullName>
    <label>Action Taken</label>
    <type>TextArea</type>
</CustomField>