force-app/main/default/objects/WorkOrder/fields/BrazilPortion__c.field-meta.xml
<CustomField>
    <fullName>BrazilPortion__c</fullName>
    <label>Brazil Portion</label>
    <summarizedField>WorkOrderLineItem.Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.ResponsibleCountry__c</field>
        <operation>equals</operation>
        <value>Brazil, MdB</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>