force-app/main/default/objects/WorkOrder/fields/BRLRate__c.field-meta.xml
<CustomField>
    <fullName>BRLRate__c</fullName>
    <label>BRL Rate</label>
    <summarizedField>WorkOrderLineItem.BRLRate__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>