force-app/main/default/objects/WorkOrder/fields/BudgetedThisYear__c.field-meta.xml
<CustomField>
    <fullName>BudgetedThisYear__c</fullName>
    <label>Budgeted in this year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>