force-app/main/default/objects/WorkOrder/fields/ByPassRenameWO__c.field-meta.xml
<CustomField>
    <fullName>ByPassRenameWO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Rename WO</label>
    <type>Checkbox</type>
</CustomField>