force-app/main/default/objects/WorkOrder/fields/ClonedWO__c.field-meta.xml
<CustomField>
    <fullName>ClonedWO__c</fullName>
    <label>Cloned WO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>