force-app/main/default/objects/WorkOrder/fields/ClosedOutRevision__c.field-meta.xml
<CustomField>
    <fullName>ClosedOutRevision__c</fullName>
    <formula>TEXT(NAM__r.RevisionCO__c)</formula>
    <label>Closed Out Revision</label>
    <type>Text</type>
</CustomField>