force-app/main/default/objects/WorkOrder/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract term</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ContractTerm__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ContractTerm__c.RelatedObjectName__c</field>
            <operation>equals</operation>
            <value>WorkOrder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ContractTerm__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>