force-app/main/default/objects/WorkOrder/fields/DescriptionLocation__c.field-meta.xml
<CustomField>
    <fullName>DescriptionLocation__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>