force-app/main/default/objects/WorkOrder/fields/EstimatedFinishDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFinishDate__c</fullName>
    <label>Estimated Finish Date</label>
    <type>Date</type>
</CustomField>