force-app/main/default/objects/WorkOrder/fields/EstimatedStartDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedStartDate__c</fullName>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>