force-app/main/default/objects/WorkOrder/fields/ISS__c.field-meta.xml
<CustomField>
    <fullName>ISS__c</fullName>
    <defaultValue>0.02</defaultValue>
    <inlineHelpText>MdB/Brazil portion only</inlineHelpText>
    <label>ISS (Brazil portion only)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>