force-app/main/default/objects/WorkOrder/fields/LessonLeantList__c.field-meta.xml
<CustomField>
    <fullName>LessonLeantList__c</fullName>
    <label>Lesson Leant List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>To be added</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>