force-app/main/default/objects/WorkOrder/fields/MarkUp__c.field-meta.xml
<CustomField>
    <fullName>MarkUp__c</fullName>
    <defaultValue>0.08</defaultValue>
    <label>Mark Up</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>