force-app/main/default/objects/WorkOrder/fields/MarkUpAmount__c.field-meta.xml
<CustomField>
    <fullName>MarkUpAmount__c</fullName>
    <formula>PortionAmount__c *  MarkUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark Up Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>