force-app/main/default/objects/WorkOrder/fields/MarkupAmountBRL__c.field-meta.xml
<CustomField>
    <fullName>MarkupAmountBRL__c</fullName>
    <formula>PortionBRL__c *  MarkUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup Amount BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>