force-app/main/default/objects/WorkOrder/fields/MarkUpAmountMdB__c.field-meta.xml
<CustomField>
    <fullName>MarkUpAmountMdB__c</fullName>
    <formula>IF(
    Responsible__c = &quot;MdB&quot;,
				MarkUpAmount__c * BRLRate__c,
				NULL
)</formula>
    <label>Mark Up Amount Mdb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>