force-app/main/default/objects/WorkOrder/fields/MarkUpBrazilAmmount__c.field-meta.xml
<CustomField>
    <fullName>MarkUpBrazilAmmount__c</fullName>
    <formula>BrazilPortion__c *  MarkUp__c</formula>
    <label>Mark Up Brazil Ammount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>