force-app/main/default/objects/WorkOrder/fields/MarkUpOutsideBrazilAmmount__c.field-meta.xml
<CustomField>
    <fullName>MarkUpOutsideBrazilAmmount__c</fullName>
    <formula>OutsideBrazilPortion__c *  MarkUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark Up Outside of Brazil Ammount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>