force-app/main/default/objects/WorkOrder/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <summarizedField>WorkOrderLineItem.Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.MS__c</field>
        <operation>equals</operation>
        <value>Material</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>