force-app/main/default/objects/WorkOrder/fields/NAMRevision__c.field-meta.xml
<CustomField>
    <fullName>NAMRevision__c</fullName>
    <formula>TEXT(NAM__r.Revision__c)</formula>
    <label>NAM Revision</label>
    <type>Text</type>
</CustomField>