force-app/main/default/objects/WorkOrder/fields/OutsideBrazilPortion__c.field-meta.xml
<CustomField>
    <fullName>OutsideBrazilPortion__c</fullName>
    <label>Outside of Brazil Portion</label>
    <summarizedField>WorkOrderLineItem.Price__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.ResponsibleCountry__c</field>
        <operation>equals</operation>
        <value>Outside of Brazil, &quot;MODEC, Inc&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>