force-app/main/default/objects/WorkOrder/fields/PortionAmount__c.field-meta.xml
<CustomField>
    <fullName>PortionAmount__c</fullName>
    <label>Portion Amount</label>
    <summarizedField>WorkOrderLineItem.Price__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>