force-app/main/default/objects/WorkOrder/fields/PortionAmountMdB__c.field-meta.xml
<CustomField>
    <fullName>PortionAmountMdB__c</fullName>
    <formula>IF(
				Responsible__c = &quot;MdB&quot;,
				BrazilPortion__c * BRLRate__c,
				NULL
)</formula>
    <label>Portion Amount MdB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>