force-app/main/default/objects/WorkOrder/fields/PortionBRL__c.field-meta.xml
<CustomField>
    <fullName>PortionBRL__c</fullName>
    <label>Portion BRL</label>
    <summarizedField>WorkOrderLineItem.BRL__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>