force-app/main/default/objects/WorkOrder/fields/RelatedDiscipline__c.field-meta.xml
<CustomField>
    <fullName>RelatedDiscipline__c</fullName>
    <label>Related Discipline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Instrumentation and Control</fullName>
            </value>
            <value>
                <fullName>IT &amp; Telecommunication</fullName>
            </value>
            <value>
                <fullName>Marine Outfitting</fullName>
            </value>
            <value>
                <fullName>Marine Utility</fullName>
            </value>
            <value>
                <fullName>Material / Corrosion</fullName>
            </value>
            <value>
                <fullName>Mooring</fullName>
            </value>
            <value>
                <fullName>Naval / Structure</fullName>
            </value>
            <value>
                <fullName>Package(e.g. GTG)</fullName>
            </value>
            <value>
                <fullName>Piping</fullName>
            </value>
            <value>
                <fullName>Process and Utility</fullName>
            </value>
            <value>
                <fullName>Process Safety</fullName>
            </value>
            <value>
                <fullName>Rotating Equipment</fullName>
            </value>
            <value>
                <fullName>Static Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>