force-app/main/default/objects/WorkOrder/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <formula>Contractor__r.ShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible</label>
    <type>Text</type>
</CustomField>