force-app/main/default/objects/WorkOrder/fields/RootCause__c.field-meta.xml
<CustomField>
    <fullName>RootCause__c</fullName>
    <label>Root Cause</label>
    <type>TextArea</type>
</CustomField>