force-app/main/default/objects/WorkOrder/fields/ScopeWork__c.field-meta.xml
<CustomField>
    <fullName>ScopeWork__c</fullName>
    <label>Scope of Work</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>