force-app/main/default/objects/WorkOrder/fields/TaxISS2__c.field-meta.xml
<CustomField>
    <fullName>TaxISS2__c</fullName>
    <formula>(BrazilPortion__c + MarkUpBrazilAmmount__c) / 0.98 * ISS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax (ISS 2%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>