force-app/main/default/objects/WorkOrder/fields/TaxISS2BRL__c.field-meta.xml
<CustomField>
    <fullName>TaxISS2BRL__c</fullName>
    <formula>IF(
    TaxISS2__c * BRLRate__c != 0,
				TaxISS2__c * BRLRate__c,
				NULL
)</formula>
    <label>Tax (ISS 2%) BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>