force-app/main/default/objects/WorkOrder/fields/TotalAmountMdB__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountMdB__c</fullName>
    <formula>BrazilPortion__c + MarkUpBrazilAmmount__c + TaxISS2__c</formula>
    <label>Total Amount MdB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>