force-app/main/default/objects/WorkOrder/fields/TotalBRL__c.field-meta.xml
<CustomField>
    <fullName>TotalBRL__c</fullName>
    <formula>PortionBRL__c +  TaxISS2BRL__c +  MarkupAmountBRL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>