force-app/main/default/objects/WorkOrder/fields/TotalWoMarkUpTax__c.field-meta.xml
<CustomField>
    <fullName>TotalWoMarkUpTax__c</fullName>
    <formula>OutsideBrazilPortion__c + BrazilPortion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (w/o Mark Up &amp; tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>