force-app/main/default/objects/WorkOrder/fields/VesselClientId__c.field-meta.xml
<CustomField>
    <fullName>VesselClientId__c</fullName>
    <formula>NAM__r.Vessel__r.SPC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel Client Id</label>
    <type>Text</type>
</CustomField>