force-app/main/default/objects/WorkOrder/fields/WOAttention__c.field-meta.xml
<CustomField>
    <fullName>WOAttention__c</fullName>
    <label>WO Attention</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>