force-app/main/default/objects/WorkOrder/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <externalId>true</externalId>
    <label>Work Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>