force-app/main/default/objects/WorkOrder/fields/WorkOrderName__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderName__c</fullName>
    <formula>HYPERLINK( Id ,  WorkOrder__c)</formula>
    <label>Work Order Name</label>
    <type>Text</type>
</CustomField>