force-app/main/default/objects/WorkOrder/fields/WorkOrderPrimaryNumber__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderPrimaryNumber__c</fullName>
    <label>WorkOrder Primary Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>