force-app/main/default/objects/WorkOrder/validationRules/dateValidaton.validationRule-meta.xml
<ValidationRule>
    <fullName>dateValidaton</fullName>
    <active>false</active>
    <errorConditionFormula>if(EstimatedFinishDate__c &lt; EstimatedStartDate__c, true, false)</errorConditionFormula>
    <errorDisplayField>EstimatedStartDate__c</errorDisplayField>
    <errorMessage>&apos;Estimated Start Date&apos; can not be  greater than &apos;Estimated Finish Date&apos;</errorMessage>
</ValidationRule>