force-app/main/default/objects/WorkOrder/validationRules/finishDateValidaton.validationRule-meta.xml
<ValidationRule>
    <fullName>finishDateValidaton</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISCHANGED(  EstimatedFinishDate__c  ), ISNEW()), EstimatedFinishDate__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>EstimatedFinishDate__c</errorDisplayField>
    <errorMessage>The field &apos;Estimated Finish Date&apos; can not be in the past</errorMessage>
</ValidationRule>