force-app/main/default/objects/WorkOrder/validationRules/startDateValidaton.validationRule-meta.xml
<ValidationRule>
    <fullName>startDateValidaton</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISCHANGED( EstimatedStartDate__c ), ISNEW()), EstimatedStartDate__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>EstimatedStartDate__c</errorDisplayField>
    <errorMessage>The field &apos;Estimated Start Date&apos; can not be in the past</errorMessage>
</ValidationRule>