force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>NAM__c</columns>
    <columns>WorkOrderName__c</columns>
    <columns>Responsible__c</columns>
    <columns>TaxISS2__c</columns>
    <columns>MarkUpAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>