force-app/main/default/objects/WorkOrder/listViews/MyWorkOrders1.listView-meta.xml
<ListView>
    <fullName>MyWorkOrders1</fullName>
    <columns>Name</columns>
    <columns>NAM__c</columns>
    <columns>WorkOrderName__c</columns>
    <columns>Responsible__c</columns>
    <columns>TaxISS2__c</columns>
    <columns>MarkUpAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <filterScope>Mine</filterScope>
    <label>My Work Orders</label>
</ListView>